@@ -39,7 +39,7 @@ setup(name='onegov.edu',
         'Products.CMFPlacefulWorkflow',
         'Products.PloneFormGen',
         'ftw.calendar',
-        'ftw.contentpage',
+        'ftw.contentpage >= 1.11.0',
         'ftw.inflator',
         'ftw.lawgiver',
         'ftw.slider',
@@ -49,6 +49,7 @@ setup(name='onegov.edu',
         'setuptools',
         'simplelayout.types.common',
         'simplelayout.types.flowplayerblock',
+        'simplelayout.ui.base >= 3.0.3',
         ],
 
       tests_require=tests_require,
